# recipe-helper

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP.md  docker-compose.user.yml  docker-compose.yml  docker-entrypoint.sh  example_recipe.txt  mypy.ini  pyproject.toml  pytest.ini  ragu_test.txt  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  test-llm-connection.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: config.yaml.example
docs/: ci-cd-setup.md  ios-shortcuts-implementation.md  ios-shortcuts-quick-reference.md  ios-shortcuts-setup.md  ollama-docker-setup.md  production-deployment.md  tailscale-quickstart.md  tailscale-setup.md
plan/: intro.md  mobile_integration.md
scripts/: build.sh  check-ollama.sh  get-tailscale-info.sh  push.sh  setup-dev.sh  setup-ollama-model.sh  start-tailscale.sh  test-api-remote.sh
src/recipe_ingest/: __init__.py  cli.py  config.py
src/recipe_ingest/api/: __init__.py  app.py  routes.py
src/recipe_ingest/api/templates/: index.html
src/recipe_ingest/core/: __init__.py  extractor.py  formatter.py  service.py  writer.py
src/recipe_ingest/llm/: __init__.py  client.py
src/recipe_ingest/models/: __init__.py  recipe.py
src/recipe_ingest/parsers/: __init__.py  instagram.py  text.py
tests/: __init__.py  conftest.py  test_sample_recipe.txt
tests/integration/: test_api.py  test_api_recipes.py  test_full_pipeline.py  test_instagram_integration.py
tests/performance/: create_reference_recipe.py  create_reference_recipe_manual.py  recipe_evaluator.py  test_instagram_benchmark.py
tests/performance/reference_recipes/: DRYdlekE-Yb.json  README.md
tests/unit/: test_config.py  test_extractor.py  test_formatter.py  test_instagram_parser.py  test_models.py  test_writer.py
tests/verification/: test_m1_verification.py
