[metadata]
name = recipe-ingest
version = 0.1.0
description = Automated recipe ingestion pipeline for Obsidian vault
author = Logan Ritter
author_email = logan.ritter@example.com

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
recipe_ingest = api/templates/*.html

[options.entry_points]
console_scripts =
    recipe-ingest = recipe_ingest.cli:main

[black]
line-length = 100
target-version = ['py311']

